// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`lint schema runtime accepts an argument selector constraint 1`] = `
[
  {
    "loc": {
      "end": {
        "parts": [
          {
            "span": {
              "endLocation": {
                "column": 8,
                "line": 2,
                "paddingLine": 2,
              },
              "index": 17,
              "length": 1,
              "startLocation": {
                "column": 7,
                "line": 2,
                "paddingLine": 2,
              },
            },
            "text": """,
            "type": 8,
          },
          {
            "span": {
              "endLocation": {
                "column": 12,
                "line": 2,
                "paddingLine": 2,
              },
              "index": 18,
              "length": 4,
              "startLocation": {
                "column": 8,
                "line": 2,
                "paddingLine": 2,
              },
            },
            "text": "3000",
            "type": 2,
          },
          {
            "span": {
              "endLocation": {
                "column": 13,
                "line": 2,
                "paddingLine": 2,
              },
              "index": 22,
              "length": 1,
              "startLocation": {
                "column": 12,
                "line": 2,
                "paddingLine": 2,
              },
            },
            "text": """,
            "type": 8,
          },
        ],
        "span": {
          "endLocation": {
            "column": 13,
            "line": 2,
            "paddingLine": 2,
          },
          "index": 17,
          "length": 6,
          "startLocation": {
            "column": 7,
            "line": 2,
            "paddingLine": 2,
          },
        },
        "text": "3000",
        "type": 12,
      },
      "start": {
        "parts": [
          {
            "span": {
              "endLocation": {
                "column": 8,
                "line": 2,
                "paddingLine": 2,
              },
              "index": 17,
              "length": 1,
              "startLocation": {
                "column": 7,
                "line": 2,
                "paddingLine": 2,
              },
            },
            "text": """,
            "type": 8,
          },
          {
            "span": {
              "endLocation": {
                "column": 12,
                "line": 2,
                "paddingLine": 2,
              },
              "index": 18,
              "length": 4,
              "startLocation": {
                "column": 8,
                "line": 2,
                "paddingLine": 2,
              },
            },
            "text": "3000",
            "type": 2,
          },
          {
            "span": {
              "endLocation": {
                "column": 13,
                "line": 2,
                "paddingLine": 2,
              },
              "index": 22,
              "length": 1,
              "startLocation": {
                "column": 12,
                "line": 2,
                "paddingLine": 2,
              },
            },
            "text": """,
            "type": 8,
          },
        ],
        "span": {
          "endLocation": {
            "column": 13,
            "line": 2,
            "paddingLine": 2,
          },
          "index": 17,
          "length": 6,
          "startLocation": {
            "column": 7,
            "line": 2,
            "paddingLine": 2,
          },
        },
        "text": "3000",
        "type": 12,
      },
    },
    "message": "port debe ser un número",
    "severity": "error",
  },
]
`;

exports[`lint schema runtime accepts a custom evaluation at the document root 1`] = `
[
  {
    "message": "el documento no puede estar vacío",
    "severity": "error",
  },
]
`;

exports[`lint schema runtime accepts a custom evaluation on a rule body 1`] = `
[
  {
    "loc": {
      "end": {
        "parts": [
          {
            "span": {
              "endLocation": {
                "column": 9,
                "line": 1,
                "paddingLine": 2,
              },
              "index": 16,
              "length": 2,
              "startLocation": {
                "column": 7,
                "line": 1,
                "paddingLine": 2,
              },
            },
            "text": "80",
            "type": 2,
          },
        ],
        "span": {
          "endLocation": {
            "column": 9,
            "line": 1,
            "paddingLine": 2,
          },
          "index": 16,
          "length": 2,
          "startLocation": {
            "column": 7,
            "line": 1,
            "paddingLine": 2,
          },
        },
        "text": "80",
        "type": 13,
      },
      "start": {
        "parts": [
          {
            "span": {
              "endLocation": {
                "column": 6,
                "line": 1,
                "paddingLine": 2,
              },
              "index": 11,
              "length": 4,
              "startLocation": {
                "column": 2,
                "line": 1,
                "paddingLine": 2,
              },
            },
            "text": "port",
            "type": 1,
          },
        ],
        "span": {
          "endLocation": {
            "column": 6,
            "line": 1,
            "paddingLine": 2,
          },
          "index": 11,
          "length": 4,
          "startLocation": {
            "column": 2,
            "line": 1,
            "paddingLine": 2,
          },
        },
        "text": "port",
        "type": 11,
      },
    },
    "message": "port privilegiado",
    "severity": "warning",
  },
]
`;

exports[`lint schema runtime accepts a custom evaluation on an argument constraint 1`] = `
[
  {
    "loc": {
      "end": {
        "parts": [
          {
            "span": {
              "endLocation": {
                "column": 11,
                "line": 1,
                "paddingLine": 2,
              },
              "index": 16,
              "length": 4,
              "startLocation": {
                "column": 7,
                "line": 1,
                "paddingLine": 2,
              },
            },
            "text": "8080",
            "type": 2,
          },
        ],
        "span": {
          "endLocation": {
            "column": 11,
            "line": 1,
            "paddingLine": 2,
          },
          "index": 16,
          "length": 4,
          "startLocation": {
            "column": 7,
            "line": 1,
            "paddingLine": 2,
          },
        },
        "text": "8080",
        "type": 13,
      },
      "start": {
        "parts": [
          {
            "span": {
              "endLocation": {
                "column": 11,
                "line": 1,
                "paddingLine": 2,
              },
              "index": 16,
              "length": 4,
              "startLocation": {
                "column": 7,
                "line": 1,
                "paddingLine": 2,
              },
            },
            "text": "8080",
            "type": 2,
          },
        ],
        "span": {
          "endLocation": {
            "column": 11,
            "line": 1,
            "paddingLine": 2,
          },
          "index": 16,
          "length": 4,
          "startLocation": {
            "column": 7,
            "line": 1,
            "paddingLine": 2,
          },
        },
        "text": "8080",
        "type": 13,
      },
    },
    "message": "argumento 1: 8080 está reservado",
    "severity": "error",
  },
]
`;

exports[`lint schema runtime runs an argument constraint's evaluation alongside its declarative checks 1`] = `
[
  {
    "loc": {
      "end": {
        "parts": [
          {
            "span": {
              "endLocation": {
                "column": 12,
                "line": 1,
                "paddingLine": 2,
              },
              "index": 16,
              "length": 5,
              "startLocation": {
                "column": 7,
                "line": 1,
                "paddingLine": 2,
              },
            },
            "text": "70000",
            "type": 2,
          },
        ],
        "span": {
          "endLocation": {
            "column": 12,
            "line": 1,
            "paddingLine": 2,
          },
          "index": 16,
          "length": 5,
          "startLocation": {
            "column": 7,
            "line": 1,
            "paddingLine": 2,
          },
        },
        "text": "70000",
        "type": 13,
      },
      "start": {
        "parts": [
          {
            "span": {
              "endLocation": {
                "column": 12,
                "line": 1,
                "paddingLine": 2,
              },
              "index": 16,
              "length": 5,
              "startLocation": {
                "column": 7,
                "line": 1,
                "paddingLine": 2,
              },
            },
            "text": "70000",
            "type": 2,
          },
        ],
        "span": {
          "endLocation": {
            "column": 12,
            "line": 1,
            "paddingLine": 2,
          },
          "index": 16,
          "length": 5,
          "startLocation": {
            "column": 7,
            "line": 1,
            "paddingLine": 2,
          },
        },
        "text": "70000",
        "type": 13,
      },
    },
    "message": "argumento 1: fuera de rango",
    "severity": "error",
  },
]
`;

exports[`lint schema runtime accepts an or combinator on port or socket, satisfied by socket alone 1`] = `
"server.donly

0 errors 0 warnings 0 info"
`;

exports[`lint schema runtime accepts an or combinator on port or socket, violated when neither is present 1`] = `
"server.donly
  -  error  required directive is missing

1 error 0 warnings 0 info"
`;
